name:                single

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.0
synopsis:            collections which have a 'singleton'-like function
description:         collections which have a 'singleton'-like function
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    Single
  other-modules:
  default-extensions: NoImplicitPrelude
  build-depends:      base, base-unicode-symbols, containers, dlist
                    , mono-traversable

                    , more-unicode >= 0.0.12.0
                    
  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------
